# pico2w_dht22_ssd1306

./: CMakeLists.txt  LICENSE  README.md  dht.c  dht.h  dht22.c  dht22.h  main.c  ssd1306.c  ssd1306.h
.github/workflows/: pull_request.yml
sketches/: pico2w-dht22-ssd1306.fzz  pico2w-dht22.fzz
